--- a/nmcnpmapp/templates/app/service.html
+++ b/nmcnpmapp/templates/app/service.html
@@ -163,7 +163,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Thêm thành viên</h5>
                             <p class="card-text">Thêm thông tin thành viên mới vào hệ thống.</p>
-                            <a href="{% url 'add_member' %}" class="btn btn-success">Chi tiết</a>
+                            <a href="{% url 'add_member' %}" class="btn btn-primary">Chi tiết</a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Tình trạng đóng phí</h5>
                             <p class="card-text">Xem chi tiết tình trạng đóng phí của gia đình bạn.</p>
-                            <button class="btn btn-warning" data-toggle="modal" data-target="#service2Modal">Chi tiết</button>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#service2Modal">Chi tiết</button>
                         </div>
                     </div>
                 </div>
