--- a/nmcnpmapp/templates/app/homepage.html
+++ b/nmcnpmapp/templates/app/homepage.html
@@ -148,7 +148,7 @@
         <!-- News Section -->
         <div class="row mt-5">
             <div class="col-md-12">
-                <h3>Thông báo mới</h3>
+                <h3>Thông báo chung</h3>
                 <div class="list-group">
                     {% for article in articles %}
                     <a href="#" class="list-group-item list-group-item-action" data-toggle="modal" data-target="#notificationModal{{ article.id }}">
