sua ten theo de bai

--- a/nmcnpmapp/templates/app/add_member.html
+++ b/nmcnpmapp/templates/app/add_member.html
@@ -90,7 +90,7 @@
         <div class="govuk-width-container">
             <div class="homepage-header__title-container">
                 <h1 class="homepage-header__title">Hệ thống Quản lý Thu phí</h1>
-                <span class="homepage-header__intro">Chung cư CNPM - Hà Nội</span>
+                <span class="homepage-header__intro">Chung cư Blue Moon - Hà Nội</span>
             </div>
         </div>
     </header>
