--- a/nmcnpmapp/templates/app/wait.html
+++ b/nmcnpmapp/templates/app/wait.html
@@ -110,7 +110,7 @@
                     Hệ thống Quản lý Thu phí
                 </h1>
                 <span class="homepage-header__intro">
-                    Chung cư CNPM - Hà Nội
+                    Chung cư Blue Moon - Hà Nội
                 </span>
             </div>
         </div>
