--- a/nmcnpmapp/templates/registration/login.html
+++ b/nmcnpmapp/templates/registration/login.html
@@ -117,6 +117,10 @@
 
                                         <a class="small text-muted" href="#!">Quên mật khẩu?</a>
                                         <p class="mb-5 pb-lg-2" style="color: #393f81;">Chưa có tài khoản? <a href="/signup" style="color: #393f81;">Đăng ký ngay</a></p>
+                                        <a class="medium text-muted" href="#!">Bạn là admin?</a>
+                                        <div class="pt-1 mb-4">
+                                            <a href="/admin" class="btn btn-dark btn-lg btn-block" role="button">Hướng đến trang quản trị</a>
+                                        </div>
                                         <a href="#!" class="small text-muted">Terms of use.</a>
                                         <a href="#!" class="small text-muted">Privacy policy</a>
                                     </form>
