--- a/nmcnpmapp/templates/app/add_member.html
+++ b/nmcnpmapp/templates/app/add_member.html
@@ -114,6 +114,10 @@
                     <input type="date" id="date_of_birth" name="date_of_birth" class="form-control" required>
                 </div>
                 <div class="form-group">
+                    <label for="date_of_birth">CCCD:</label>
+                    <input type="text" id="cccd" name="cccd" class="form-control" placeholder="CCCD" required>
+                </div>
+                <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" class="form-control" placeholder="Nhập email" required>
                 </div>
