--- a/nmcnpmapp/templates/app/member.html
+++ b/nmcnpmapp/templates/app/member.html
@@ -87,6 +87,7 @@
                 <tr>
                     <th>Họ và Tên</th>
                     <th>Ngày sinh</th>
+                    <th>CCCD</th>
                     <th>Email</th>
                     <th>Số Điện Thoại</th>
                 </tr>
@@ -96,6 +97,7 @@
                     <tr>
                         <td>{{ member.first_name }} {{ member.last_name }}</td>
                         <td>{{ member.date_of_birth }}</td>
+                        <td>{{ member.cccd }}</td>
                         <td>{{ member.email }}</td>
                         <td>{{ member.phone_number }}</td>
                     </tr>
