--- a/nmcnpmapp/templates/registration/login.html
+++ b/nmcnpmapp/templates/registration/login.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/static/css/responsive-mobile.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <style>
         /* Background gradient */
         .login-section {
@@ -135,11 +136,9 @@
 
     <!-- Toast messages -->
     {% if messages %}
-    <div id="toast-container" style="position: fixed; top: 10px; right: 10px; z-index: 1050;">
+    <div id="toast-container">
         {% for message in messages %}
-            <div class="toast {{ message.tags }}" style="padding: 10px; margin-bottom: 10px; border-radius: 5px; background-color: #f8d7da; color: #721c24; border: 1px solid #f5c6cb;">
-                {{ message }}
-            </div>
+            <div class="toast {{ message.tags }}">{{ message }}</div>
         {% endfor %}
     </div>
     {% endif %}
