--- a/nmcnpmapp/templates/app/service.html
+++ b/nmcnpmapp/templates/app/service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thông báo - Hệ thống Quản lý Thu phí</title>
+    <title>Dịch vụ - Hệ thống Quản lý Thu phí</title>
 
     {% load static %}
     
