--- a/nmcnpmapp/templates/app/wait.html
+++ b/nmcnpmapp/templates/app/wait.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang chủ - Hệ thống Quản lý Thu phí</title>
+    <title>Trang chờ - Hệ thống Quản lý Thu phí</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/home.css' %}?v=8">
     <link rel="stylesheet" href="/static/css/msg.css">
