fix filter priority

--- a/nmcnpmapp/templates/app/service.html
+++ b/nmcnpmapp/templates/app/service.html
@@ -304,8 +304,8 @@
                 </button>
             </div>
             <div class="modal-body text-center">
-                <p><strong>Khoản thu:</strong> <span id="modal-khoan-thu"></span></p>
-                <p><strong>Phí:</strong> <span id="modal-phi"></span></p>
+                <p><strong>Khoản thu:</strong> <span id="modal-khoan-thu"></span><br></p>
+                <p><strong>Phí:</strong> <span id="modal-phi"></span><br></p>
                 <p><strong>Hạn nộp:</strong> <span id="modal-han-nop"></span></p>
                 <img id="modal-qr-img" src="" alt="QR Code chuyển khoản" class="qr-img">
             </div>
